<resources>
    <string name="app_name">Mausam Essence</string>
    <string name="parent_package_name">com.abhitom.mausamessence</string>
    <string name="content_description_search">for searching locations by city</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="location">Location</string>
    <string name="sunrise">Sunrise</string>
    <string name="sunset">Sunset</string>
    <string name="feels_like">Feels Like</string>
    <string name="humidity">Humidity</string>
    <string name="pressure">Pressure</string>
    <string name="visibility">Visibility</string>
    <string name="wind_speed">Wind Speed</string>
    <string name="uv_index">UV Index</string>
    <string name="hi_user">Hi, User!</string>
    <string name="search_button">Search Button</string>
    <string name="what_do_we_call_you">What do we call you?</string>
    <string name="welcomes_you">Welcomes you!</string>
    <string name="next">NEXT</string>
    <string name="username">Username</string>
    <string name="clouds">Clouds</string>
</resources>